// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Suggestions/> render with default/required props 1`] = `
<div
  className="suggestions "
>
  <div
    className="suggestion undefined"
    data-cy="-suggestion-0"
    data-id={0}
    key="0"
  >
    <div
      className="suggestion__label"
      data-id={0}
    >
      {{label-only}}
    </div>
  </div>
  <div
    className="suggestion undefined"
    data-cy="-suggestion-1"
    data-id={1}
    key="1"
  >
    <div
      className="suggestion__hierarchy"
    >
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={0}
        key="0"
      >
        {{root}}
      </span>
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={1}
        key="1"
      >
        {{sub-children}}
      </span>
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={2}
        key="2"
      >
        {{label-with-hierarchy}}
      </span>
    </div>
    <div
      className="suggestion__label"
      data-id={1}
    >
      {{label-with-hierarchy}}
    </div>
  </div>
  <div
    className="suggestion undefined"
    data-cy="-suggestion-2"
    data-id={2}
    key="2"
  >
    <div
      className="suggestion__label"
      data-id={2}
    >
      {{label-with-description}}
    </div>
    <p
      className="suggestion__description"
      data-id={2}
    >
      {{description}}
    </p>
  </div>
</div>
`;

exports[`<Suggestions/> render with optional props [::className] as "{{className}}" 1`] = `
<div
  className="suggestions {{className}}"
>
  <div
    className="suggestion undefined"
    data-cy="-suggestion-0"
    data-id={0}
    key="0"
  >
    <div
      className="suggestion__label"
      data-id={0}
    >
      {{label-only}}
    </div>
  </div>
  <div
    className="suggestion undefined"
    data-cy="-suggestion-1"
    data-id={1}
    key="1"
  >
    <div
      className="suggestion__hierarchy"
    >
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={0}
        key="0"
      >
        {{root}}
      </span>
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={1}
        key="1"
      >
        {{sub-children}}
      </span>
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={2}
        key="2"
      >
        {{label-with-hierarchy}}
      </span>
    </div>
    <div
      className="suggestion__label"
      data-id={1}
    >
      {{label-with-hierarchy}}
    </div>
  </div>
  <div
    className="suggestion undefined"
    data-cy="-suggestion-2"
    data-id={2}
    key="2"
  >
    <div
      className="suggestion__label"
      data-id={2}
    >
      {{label-with-description}}
    </div>
    <p
      className="suggestion__description"
      data-id={2}
    >
      {{description}}
    </p>
  </div>
</div>
`;

exports[`<Suggestions/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<div
  className="suggestions "
>
  <div
    className="suggestion undefined"
    data-cy="{{data-cy}}-suggestion-0"
    data-id={0}
    key="0"
  >
    <div
      className="suggestion__label"
      data-id={0}
    >
      {{label-only}}
    </div>
  </div>
  <div
    className="suggestion undefined"
    data-cy="{{data-cy}}-suggestion-1"
    data-id={1}
    key="1"
  >
    <div
      className="suggestion__hierarchy"
    >
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={0}
        key="0"
      >
        {{root}}
      </span>
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={1}
        key="1"
      >
        {{sub-children}}
      </span>
      <span
        className="suggestion__hierarchy-label undefined"
        data-id={2}
        key="2"
      >
        {{label-with-hierarchy}}
      </span>
    </div>
    <div
      className="suggestion__label"
      data-id={1}
    >
      {{label-with-hierarchy}}
    </div>
  </div>
  <div
    className="suggestion undefined"
    data-cy="{{data-cy}}-suggestion-2"
    data-id={2}
    key="2"
  >
    <div
      className="suggestion__label"
      data-id={2}
    >
      {{label-with-description}}
    </div>
    <p
      className="suggestion__description"
      data-id={2}
    >
      {{description}}
    </p>
  </div>
</div>
`;

exports[`<Suggestions/> render with optional props [::hashmap] - should NOT render options with values which are present in ::hashmap 1`] = `
<div
  className="suggestions "
>
  <div
    className="suggestion undefined"
    data-cy="-suggestion-0"
    data-id={0}
    key="0"
  >
    <div
      className="suggestion__label"
      data-id={0}
    >
      {{label-only}}
    </div>
  </div>
</div>
`;
